--- a/.github/workflows/deploy_aws_eb.yml
+++ b/.github/workflows/deploy_aws_eb.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: VirtualvisitsEb
+          application_name: virtualvisits-eb
           environment_name: VirtualvisitsEb-env
           region: eu-west-2
           version_label: 12345
