--- a/circle.yml
+++ b/circle.yml
@@ -27,7 +27,7 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-            - run: npm rebuild node-sass
+            #- run: npm rebuild node-sass
             - run: npm run build
   test:
     docker:
