--- a/userEvents/az/nhs_virtual_visits_functions/package.json
+++ b/userEvents/az/nhs_virtual_visits_functions/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "func start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
