--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,8 @@ jobs:
         # Provide the password for postgres
         env:
           POSTGRES_PASSWORD: postgres
-        # Set health checks to wait until postgres has started
+          POSTGRES_DB: nhs-virtual-visit-test
+          # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -44,9 +45,13 @@ jobs:
       run: npm test
     - name: setup test postgres
       run: npm run dbmigratetest up
+      env: 
+        #TEST_DATABASE_URL: postgresql://postgres:postgres@localhost/nhs-virtual-visit-test
+        TEST_DATABASE_URL: postgresql://postgres:postgres@postgres/nhs-virtual-visit-test
+        APP_ENV: test  
     - name: contract tests
       run: npm run test:contract
       env: 
         #TEST_DATABASE_URL: postgresql://postgres:postgres@localhost/nhs-virtual-visit-test
         TEST_DATABASE_URL: postgresql://postgres:postgres@postgres/nhs-virtual-visit-test
-      
+        APP_ENV: test      
