--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,9 +24,12 @@ jobs:
         image: postgres
         # Provide the password for postgres
         env:
+          POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: nhs-virtual-visit-test
           # Set health checks to wait until postgres has started
+        ports:
+          - 5432:tcp
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -47,7 +50,7 @@ jobs:
       run: npm run dbmigratetest up
       env: 
         #TEST_DATABASE_URL: postgresql://postgres:postgres@localhost/nhs-virtual-visit-test
-        TEST_DATABASE_URL: postgresql://postgres:postgres@localhost/nhs-virtual-visit-test
+        TEST_DATABASE_URL: postgresql://postgres:postgres@postgres:5432/nhs-virtual-visit-test
         APP_ENV: test  
     - name: contract tests
       run: npm run test:contract
