--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
           POSTGRES_DB: nhs-virtual-visit-test
           # Set health checks to wait until postgres has started
         ports:
-          - 5432:tcp
+          - 5432/tcp
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
