--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
           POSTGRES_DB: nhs-virtual-visit-test
           # Set health checks to wait until postgres has started
         ports:
-          - 5432/tcp
+          - 5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -50,11 +50,11 @@ jobs:
       run: npm run dbmigratetest up
       env: 
         #TEST_DATABASE_URL: postgresql://postgres:postgres@localhost/nhs-virtual-visit-test
-        TEST_DATABASE_URL: postgresql://postgres:postgres@postgres:5432/nhs-virtual-visit-test
+        TEST_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
         APP_ENV: test  
     - name: contract tests
       run: npm run test:contract
       env: 
         #TEST_DATABASE_URL: postgresql://postgres:postgres@localhost/nhs-virtual-visit-test
-        TEST_DATABASE_URL: postgresql://postgres:postgres@postgres/nhs-virtual-visit-test
+        TEST_DATABASE_URL: postgresql://postgres:postgres@postgres:5432/nhs-virtual-visit-test
         APP_ENV: test      
