--- a/userEvents/az/nhs_virtual_visits_functions/package.json
+++ b/userEvents/az/nhs_virtual_visits_functions/package.json
@@ -8,5 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@azure/cosmos": "^3.9.2"
+  }
 }
