--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -56,5 +56,5 @@ jobs:
       run: npm run test:contract
       env: 
         #TEST_DATABASE_URL: postgresql://postgres:postgres@localhost/nhs-virtual-visit-test
-        TEST_DATABASE_URL: postgresql://postgres:postgres@postgres:5432/nhs-virtual-visit-test
+        TEST_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
         APP_ENV: test      
