--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -49,12 +49,15 @@ jobs:
     - name: setup test postgres
       run: npm run dbmigratetest up
       env: 
-        #TEST_DATABASE_URL: postgresql://postgres:postgres@localhost/nhs-virtual-visit-test
         TEST_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
         APP_ENV: test  
     - name: contract tests
       run: npm run test:contract
       env: 
-        #TEST_DATABASE_URL: postgresql://postgres:postgres@localhost/nhs-virtual-visit-test
         TEST_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
-        APP_ENV: test      
+        APP_ENV: test   
+    - name: Cypress run
+      uses: cypress-io/github-action@v2 
+      env: 
+        TEST_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
+        APP_ENV: test    
